# file-recovery

./: .gitignore  CMakeLists.txt  README.md  carver.cpp  carver.hpp  fat_undelete.cpp  fat_undelete.hpp  file_recovery  main.cpp
.github/workflows/: release.yml
build-gui/: CMakeCache.txt  Makefile  cmake_install.cmake
gui/: app_style.cpp  app_style.hpp  main.cpp  mainwindow.cpp  mainwindow.h
packaging/: file-recovery-gui.desktop
